kubernetes/apps/frigate/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  selector:
    matchLabels:
      app: frigate
  replicas: 1
  template:
    metadata:
      labels:
        app: frigate
    spec:
      nodeSelector:
        frigate: allowed
      volumes:
      - name: frigate-config
        nfs:
          path: /mnt/ssd/frigate/config
          server: 10.10.3.2
      - name: frigate-recordings
        nfs:
          path: /mnt/ssd/frigate/recordings
          server: 10.10.3.2
      - name: frigate-ram-cache
        emptyDir:
          medium: Memory
          sizeLimit: 256Mi
      - name: frigate-ram-cameras
        emptyDir:
          medium: Memory
          sizeLimit: 256Mi

      restartPolicy: Always
      dnsConfig:
        options:
        - name: ndots
          value: "1"
      containers:
      - name: frigate
        image: ghcr.io/blakeblackshear/frigate:stable
        imagePullPolicy: Always
        securityContext:
          privileged: true
        resources:
          requests:
            cpu: "0.1"
            memory: 1G

        ports:
        - containerPort: 5000
          name: frigate

        volumeMounts:
        - mountPath: /config
          name: frigate-config
        - mountPath: /media/frigate
          name: frigate-recordings
        - mountPath: /tmp/cache
          name: frigate-ram-cache
        - mountPath: /dev/shm
          name: frigate-ram-cameras
---

apiVersion: v1
kind: Service
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  type: ClusterIP
  ports:
  - name: frigate
    port: 5000
    targetPort: 5000
  selector:
    app: frigate
